# sitscwl

./: .gitignore  CHANGES.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yaml
cwl/: workflow.cwl
cwl/R/: classification.R  extract_timeseries.R
cwl/tools/: classification.tool  extract_timeseries.tool
docker/: README.md
docker/execution/: Dockerfile
examples/: CB4_BahiaWest_LULC.yaml  CB4_MatoGrosso_LULC.yaml  MOD13Q1_MatoGrosso_LULC.yaml  generate-sitsflow-cbers-bahia-lulc.py
examples/compendia/: lulc-bahia-cbers4.py  lulc-matogrosso-cbers4.py  lulc-matogrosso-mod13q1.py
examples/data/: samples-bahiawest.csv  samples-matogrosso.csv  samples_bahia.csv  samples_matogrosso.csv
sitscwl/: __init__.py  compendium.py  constant.py  mapping.py  models.py  resource.py  tool.py  tools.py  version.py  workflow.py
sitscwl/models/: __init__.py  data.py  ml_model.py
sitscwl/resources/schema/: classification_tool.json  extract_timeseries_tool.json
sitscwl/resources/scripts/: classification.R  extract_timeseries.R
sitscwl/schema/: classification_tool.json  connections.json
sitscwl/scripts/: classification.R  extract_timeseries.R
