[tool.poetry]
name = "sitscwl"
version = "0.1a"
description = "Satellite Image Time Series with CWL batteries included"
authors = ["Felipe Menino <efelipecarlos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sevenbridges-cwl = {git = "https://github.com/M3nin0/sevenbridges-cwl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
